Update purchase and crm Fees page: - add spaces between the Th and Tds - added space for the all currency fields so it can be seen when currency is selected

--- a/Install-erp/addons/crm/views/crm_lead_views.xml
+++ b/Install-erp/addons/crm/views/crm_lead_views.xml
@@ -65,7 +65,7 @@
                                 <span class="o_stat_text" invisible="duplicate_lead_count &gt; 1">Similar Lead</span>
                             </div>
                         </button>
-                                                <field name="rfq_created" invisible="1"/>
+                        <field name="rfq_created" invisible="1"/>
 
                         <button name="action_view_rfqs"
                                 type="object"
@@ -458,53 +458,57 @@
                                 <group colspan="2">
                                     <div class="mb-3">
                                         <strong>DD</strong>
-                                        <table style="width: 100%; border-collapse: separate; border-spacing: 25px 12px;">
+                                        <table style="width: 100%; border-collapse: separate; border-spacing: 35px 15px;">
                                             <thead>
                                                 <tr>
-                                                    <th style="text-align: left;">Montant</th>
-                                                    <th style="text-align: center;">Devise</th>
-                                                    <th style="text-align: right;">Montant en Dinar</th>
+                                                    <th style="text-align: left; padding: 8px 12px;">Amount</th>
+                                                    <th style="text-align: center; padding: 8px 12px;">Currency</th>
+                                                    <th style="text-align: right; padding: 8px 12px;">Amount in Dinar
+                                                    </th>
                                                 </tr>
                                             </thead>
                                             <tbody>
                                                 <tr>
-                                                    <td style="text-align: left;">
+                                                    <td style="text-align: left; padding: 8px 12px;">
                                                         <field name="dd_amount"/>
                                                     </td>
-                                                    <td style="text-align: center;">
-                                                        <field name="dd_currency_id"/>
+                                                    <td style="text-align: center; padding: 8px 12px;">
+                                                        <field name="dd_currency_id"
+                                                               style="min-width: 120px; width: 100%;"
+                                                               options="{'no_create': True}"/>
                                                     </td>
-                                                    <td style="text-align: right;">
+                                                    <td style="text-align: right; padding: 8px 12px;">
                                                         <field name="dd_amount_dinar"/>
                                                     </td>
                                                 </tr>
                                             </tbody>
                                         </table>
-
-
                                     </div>
-
                                 </group>
+
                                 <group colspan="2">
                                     <div class="mb-3">
                                         <strong>Transport</strong>
-                                        <table style="width: 100%; border-collapse: separate; border-spacing: 25px 12px;">
+                                        <table style="width: 100%; border-collapse: separate; border-spacing: 35px 15px;">
                                             <thead>
                                                 <tr>
-                                                    <th style="text-align: left;">Montant</th>
-                                                    <th style="text-align: center;">Devise</th>
-                                                    <th style="text-align: right;">Montant en Dinar</th>
+                                                    <th style="text-align: left; padding: 8px 12px;">Amount</th>
+                                                    <th style="text-align: center; padding: 8px 12px;">Currency</th>
+                                                    <th style="text-align: right; padding: 8px 12px;">Amount in Dinar
+                                                    </th>
                                                 </tr>
                                             </thead>
                                             <tbody>
                                                 <tr>
-                                                    <td style="text-align: left;">
+                                                    <td style="text-align: left; padding: 8px 12px;">
                                                         <field name="transport_amount"/>
                                                     </td>
-                                                    <td style="text-align: center;">
-                                                        <field name="transport_currency_id"/>
+                                                    <td style="text-align: center; padding: 8px 12px;">
+                                                        <field name="transport_currency_id"
+                                                               style="min-width: 120px; width: 100%;"
+                                                               options="{'no_create': True}"/>
                                                     </td>
-                                                    <td style="text-align: right;">
+                                                    <td style="text-align: right; padding: 8px 12px;">
                                                         <field name="transport_amount_dinar"/>
                                                     </td>
                                                 </tr>
@@ -516,23 +520,26 @@
                                 <group colspan="2">
                                     <div class="mb-3">
                                         <strong>Transit</strong>
-                                        <table style="width: 100%; border-collapse: separate; border-spacing: 25px 12px;">
+                                        <table style="width: 100%; border-collapse: separate; border-spacing: 35px 15px;">
                                             <thead>
                                                 <tr>
-                                                    <th style="text-align: left;">Montant</th>
-                                                    <th style="text-align: center;">Devise</th>
-                                                    <th style="text-align: right;">Montant en Dinar</th>
+                                                    <th style="text-align: left; padding: 8px 12px;">Amount</th>
+                                                    <th style="text-align: center; padding: 8px 12px;">Currency</th>
+                                                    <th style="text-align: right; padding: 8px 12px;">Amount in Dinar
+                                                    </th>
                                                 </tr>
                                             </thead>
                                             <tbody>
                                                 <tr>
-                                                    <td style="text-align: left;">
+                                                    <td style="text-align: left; padding: 8px 12px;">
                                                         <field name="transit_amount"/>
                                                     </td>
-                                                    <td style="text-align: center;">
-                                                        <field name="transit_currency_id"/>
+                                                    <td style="text-align: center; padding: 8px 12px;">
+                                                        <field name="transit_currency_id"
+                                                               style="min-width: 120px; width: 100%;"
+                                                               options="{'no_create': True}"/>
                                                     </td>
-                                                    <td style="text-align: right;">
+                                                    <td style="text-align: right; padding: 8px 12px;">
                                                         <field name="transit_amount_dinar"/>
                                                     </td>
                                                 </tr>
@@ -543,24 +550,27 @@
 
                                 <group colspan="2">
                                     <div class="mb-3">
-                                        <strong>Cert</strong>
-                                        <table style="width: 100%; border-collapse: separate; border-spacing: 25px 12px;">
+                                        <strong>Certificate</strong>
+                                        <table style="width: 100%; border-collapse: separate; border-spacing: 35px 15px;">
                                             <thead>
                                                 <tr>
-                                                    <th style="text-align: left;">Montant</th>
-                                                    <th style="text-align: center;">Devise</th>
-                                                    <th style="text-align: right;">Montant en Dinar</th>
+                                                    <th style="text-align: left; padding: 8px 12px;">Amount</th>
+                                                    <th style="text-align: center; padding: 8px 12px;">Currency</th>
+                                                    <th style="text-align: right; padding: 8px 12px;">Amount in Dinar
+                                                    </th>
                                                 </tr>
                                             </thead>
                                             <tbody>
                                                 <tr>
-                                                    <td style="text-align: left;">
+                                                    <td style="text-align: left; padding: 8px 12px;">
                                                         <field name="cert_amount"/>
                                                     </td>
-                                                    <td style="text-align: center;">
-                                                        <field name="cert_currency_id"/>
+                                                    <td style="text-align: center; padding: 8px 12px;">
+                                                        <field name="cert_currency_id"
+                                                               style="min-width: 120px; width: 100%;"
+                                                               options="{'no_create': True}"/>
                                                     </td>
-                                                    <td style="text-align: right;">
+                                                    <td style="text-align: right; padding: 8px 12px;">
                                                         <field name="cert_amount_dinar"/>
                                                     </td>
                                                 </tr>
@@ -568,39 +578,34 @@
                                         </table>
                                     </div>
                                 </group>
-                                <group>
-                                    <!-- … your other fields … -->
 
+                                <group>
                                     <div class="mb-3">
                                         <strong>Additional Cost Allocation</strong>
-                                        <table style="width: 100%; border-collapse: separate; border-spacing: 20px 10px;">
+                                        <table style="width: 100%; border-collapse: separate; border-spacing: 35px 15px;">
                                             <thead>
                                                 <tr>
-                                                    <!-- Bigger headers -->
-                                                    <th style="text-align: left; font-size: 1.2em;">Cost By Product</th>
-                                                    <th style="text-align: right; font-size: 1.2em;">Total Amount
-                                                        (Dinar)
+                                                    <th style="text-align: left; font-size: 1.2em; padding: 8px 12px;">
+                                                        Cost by Product
+                                                    </th>
+                                                    <th style="text-align: right; font-size: 1.2em; padding: 8px 12px;">
+                                                        Total Amount (Dinar)
                                                     </th>
                                                 </tr>
                                             </thead>
                                             <tbody>
                                                 <tr>
-                                                    <!-- Bigger cells -->
-                                                    <td style="text-align: left; font-size: 1.1em;">
+                                                    <td style="text-align: left; font-size: 1.1em; padding: 8px 12px;">
                                                         <field name="cost_by_product"/>
                                                     </td>
-                                                    <td style="text-align: right; font-size: 1.1em;">
+                                                    <td style="text-align: right; font-size: 1.1em; padding: 8px 12px;">
                                                         <field name="total_amount_dinar"/>
                                                     </td>
                                                 </tr>
                                             </tbody>
                                         </table>
                                     </div>
-
-                                    <!-- … rest of your form … -->
                                 </group>
-
-
                             </group>
 
 
