--- a/Install-erp/addons/purchase/views/purchase_views.xml
+++ b/Install-erp/addons/purchase/views/purchase_views.xml
@@ -189,12 +189,12 @@
                         <h1 class="d-flex">
                             <field name="priority" widget="priority" class="me-3"/>
                             <field name="name" readonly="1"/>
-                            <field name="crm_lead_id" invisible="1" />
+                            <field name="crm_lead_id" invisible="1"/>
                         </h1>
                     </div>
                     <group>
                         <group>
-                                                        <field name="crm_lead_id" invisible="0" />
+                            <field name="crm_lead_id" invisible="0"/>
 
                             <field name="partner_id" widget="res_partner_many2one"
                                    context="{'res_partner_search_mode': 'supplier', 'show_vat': True}"
@@ -496,156 +496,149 @@
                                 </group>
                             </group>
                         </page>
-                        <page string="Fees">
-                            <group string="Financial Details">
-                                <group colspan="2">
-                                    <div class="mb-3">
-                                        <strong>DD</strong>
-                                        <table style="width: 100%; border-collapse: separate; border-spacing: 25px 12px;">
-                                            <thead>
-                                                <tr>
-                                                    <th style="text-align: left;">Montant</th>
-                                                    <th style="text-align: center;">Devise</th>
-                                                    <th style="text-align: right;">Montant en Dinar</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                <tr>
-                                                    <td style="text-align: left;">
-                                                        <field name="dd_amount"/>
-                                                    </td>
-                                                    <td style="text-align: center;">
-                                                        <field name="dd_currency_id"/>
-                                                    </td>
-                                                    <td style="text-align: right;">
-                                                        <field name="dd_amount_dinar"/>
-                                                    </td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
+<page string="Fees">
+    <group string="Financial Details">
+        <group colspan="2">
+            <div class="mb-3">
+                <strong>DD</strong>
+                <table style="width: 100%; border-collapse: separate; border-spacing: 35px 15px;">
+                    <thead>
+                        <tr>
+                            <th style="text-align: left; padding: 8px 12px;">Amount</th>
+                            <th style="text-align: center; padding: 8px 12px;">Currency</th>
+                            <th style="text-align: right; padding: 8px 12px;">Amount in Dinar</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td style="text-align: left; padding: 8px 12px;">
+                                <field name="dd_amount"/>
+                            </td>
+                            <td style="text-align: center; padding: 8px 12px;">
+                                <field name="dd_currency_id" style="min-width: 120px; width: 100%;" options="{'no_create': True}"/>
+                            </td>
+                            <td style="text-align: right; padding: 8px 12px;">
+                                <field name="dd_amount_dinar"/>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </group>
 
+        <group colspan="2">
+            <div class="mb-3">
+                <strong>Transport</strong>
+                <table style="width: 100%; border-collapse: separate; border-spacing: 35px 15px;">
+                    <thead>
+                        <tr>
+                            <th style="text-align: left; padding: 8px 12px;">Amount</th>
+                            <th style="text-align: center; padding: 8px 12px;">Currency</th>
+                            <th style="text-align: right; padding: 8px 12px;">Amount in Dinar</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td style="text-align: left; padding: 8px 12px;">
+                                <field name="transport_amount"/>
+                            </td>
+                            <td style="text-align: center; padding: 8px 12px;">
+                                <field name="transport_currency_id" style="min-width: 120px; width: 100%;" options="{'no_create': True}"/>
+                            </td>
+                            <td style="text-align: right; padding: 8px 12px;">
+                                <field name="transport_amount_dinar"/>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </group>
 
-                                    </div>
+        <group colspan="2">
+            <div class="mb-3">
+                <strong>Transit</strong>
+                <table style="width: 100%; border-collapse: separate; border-spacing: 35px 15px;">
+                    <thead>
+                        <tr>
+                            <th style="text-align: left; padding: 8px 12px;">Amount</th>
+                            <th style="text-align: center; padding: 8px 12px;">Currency</th>
+                            <th style="text-align: right; padding: 8px 12px;">Amount in Dinar</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td style="text-align: left; padding: 8px 12px;">
+                                <field name="transit_amount"/>
+                            </td>
+                            <td style="text-align: center; padding: 8px 12px;">
+                                <field name="transit_currency_id" style="min-width: 120px; width: 100%;" options="{'no_create': True}"/>
+                            </td>
+                            <td style="text-align: right; padding: 8px 12px;">
+                                <field name="transit_amount_dinar"/>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </group>
 
-                                </group>
-                                <group colspan="2">
-                                    <div class="mb-3">
-                                        <strong>Transport</strong>
-                                        <table style="width: 100%; border-collapse: separate; border-spacing: 25px 12px;">
-                                            <thead>
-                                                <tr>
-                                                    <th style="text-align: left;">Montant</th>
-                                                    <th style="text-align: center;">Devise</th>
-                                                    <th style="text-align: right;">Montant en Dinar</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                <tr>
-                                                    <td style="text-align: left;">
-                                                        <field name="transport_amount"/>
-                                                    </td>
-                                                    <td style="text-align: center;">
-                                                        <field name="transport_currency_id"/>
-                                                    </td>
-                                                    <td style="text-align: right;">
-                                                        <field name="transport_amount_dinar"/>
-                                                    </td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
-                                    </div>
-                                </group>
+        <group colspan="2">
+            <div class="mb-3">
+                <strong>Certificate</strong>
+                <table style="width: 100%; border-collapse: separate; border-spacing: 35px 15px;">
+                    <thead>
+                        <tr>
+                            <th style="text-align: left; padding: 8px 12px;">Amount</th>
+                            <th style="text-align: center; padding: 8px 12px;">Currency</th>
+                            <th style="text-align: right; padding: 8px 12px;">Amount in Dinar</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td style="text-align: left; padding: 8px 12px;">
+                                <field name="cert_amount"/>
+                            </td>
+                            <td style="text-align: center; padding: 8px 12px;">
+                                <field name="cert_currency_id" style="min-width: 120px; width: 100%;" options="{'no_create': True}"/>
+                            </td>
+                            <td style="text-align: right; padding: 8px 12px;">
+                                <field name="cert_amount_dinar"/>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </group>
 
-                                <group colspan="2">
-                                    <div class="mb-3">
-                                        <strong>Transit</strong>
-                                        <table style="width: 100%; border-collapse: separate; border-spacing: 25px 12px;">
-                                            <thead>
-                                                <tr>
-                                                    <th style="text-align: left;">Montant</th>
-                                                    <th style="text-align: center;">Devise</th>
-                                                    <th style="text-align: right;">Montant en Dinar</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                <tr>
-                                                    <td style="text-align: left;">
-                                                        <field name="transit_amount"/>
-                                                    </td>
-                                                    <td style="text-align: center;">
-                                                        <field name="transit_currency_id"/>
-                                                    </td>
-                                                    <td style="text-align: right;">
-                                                        <field name="transit_amount_dinar"/>
-                                                    </td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
-                                    </div>
-                                </group>
-
-                                <group colspan="2">
-                                    <div class="mb-3">
-                                        <strong>Cert</strong>
-                                        <table style="width: 100%; border-collapse: separate; border-spacing: 25px 12px;">
-                                            <thead>
-                                                <tr>
-                                                    <th style="text-align: left;">Montant</th>
-                                                    <th style="text-align: center;">Devise</th>
-                                                    <th style="text-align: right;">Montant en Dinar</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                <tr>
-                                                    <td style="text-align: left;">
-                                                        <field name="cert_amount"/>
-                                                    </td>
-                                                    <td style="text-align: center;">
-                                                        <field name="cert_currency_id"/>
-                                                    </td>
-                                                    <td style="text-align: right;">
-                                                        <field name="cert_amount_dinar"/>
-                                                    </td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
-                                    </div>
-                                </group>
-                                <group>
-                                    <!-- … your other fields … -->
-
-                                    <div class="mb-3">
-                                        <strong>Additional Cost Allocation</strong>
-                                        <table style="width: 100%; border-collapse: separate; border-spacing: 20px 10px;">
-                                            <thead>
-                                                <tr>
-                                                    <!-- Bigger headers -->
-                                                    <th style="text-align: left; font-size: 1.2em;">Cost By Product</th>
-                                                    <th style="text-align: right; font-size: 1.2em;">Total Amount
-                                                        (Dinar)
-                                                    </th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                <tr>
-                                                    <!-- Bigger cells -->
-                                                    <td style="text-align: left; font-size: 1.1em;">
-                                                        <field name="cost_by_product"/>
-                                                    </td>
-                                                    <td style="text-align: right; font-size: 1.1em;">
-                                                        <field name="total_amount_dinar"/>
-                                                    </td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
-                                    </div>
-
-                                    <!-- … rest of your form … -->
-                                </group>
-
-
-                            </group>
-                        </page>
+        <group>
+            <div class="mb-3">
+                <strong>Additional Cost Allocation</strong>
+                <table style="width: 100%; border-collapse: separate; border-spacing: 35px 15px;">
+                    <thead>
+                        <tr>
+                            <th style="text-align: left; font-size: 1.2em; padding: 8px 12px;">
+                                Cost by Product
+                            </th>
+                            <th style="text-align: right; font-size: 1.2em; padding: 8px 12px;">
+                                Total Amount (Dinar)
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td style="text-align: left; font-size: 1.1em; padding: 8px 12px;">
+                                <field name="cost_by_product"/>
+                            </td>
+                            <td style="text-align: right; font-size: 1.1em; padding: 8px 12px;">
+                                <field name="total_amount_dinar"/>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </group>
+    </group>
+</page>
                         <page string="Cost Price">
                             <field name="cost_line_ids">
                                 <tree editable="bottom">
