--- a/Install-erp/addons/crm/views/crm_lead_views.xml
+++ b/Install-erp/addons/crm/views/crm_lead_views.xml
@@ -25,10 +25,13 @@
                             class="btn-primary"
                             invisible="final_product_list_generated"
                     />
+                                            <field name="rfq_created" invisible="1"/>
+
                     <button name="action_create_rfq"
                             type="object"
                             string="Create RFQ"
                             class="btn-primary"
+                            invisible="not final_product_list_generated or rfq_created"
                     />
                     <field name="final_product_list_generated" invisible="1"/>
                     <field name="purchase_rfq_ids" invisible="1"/>
@@ -428,7 +431,7 @@
                         </page>
 
 
-                        <page string="Lignes de coût">
+                        <page string="Lignes de coût" invisible="not purchase_order_created">
                             <field name="cost_line_ids">
                                 <tree>
                                     <field name="product_id"/>
@@ -441,7 +444,7 @@
                                 </tree>
                             </field>
                         </page>
-                        <page string="Estimation">
+                        <page string="Estimation" invisible="not purchase_order_created">
                             <field name="estimation_line_ids">
                                 <tree editable="bottom">
                                     <field name="barcode"/>
