--- a/custom_addons/nn_crm_updated_workflow/views/crm_lead_views.xml
+++ b/custom_addons/nn_crm_updated_workflow/views/crm_lead_views.xml
@@ -98,7 +98,7 @@
                         </tree>
                     </field>
                 </page>
-                <page string="Estimation" invisible="not purchase_order_created">
+                <page string="Estimation" invisible="not rfq_created">
                     <field name="estimation_line_ids">
                         <tree editable="bottom">
                             <field name="barcode"/>
